# tst_weather

./: .gitignore  CMakeLists.txt  README.md  aws.cpp  aws.h  data_base.cpp  data_base.h  settings_pop_up.cpp  settings_pop_up.h  settings_pop_up.ui  tst_weather_ui.pro
.yocto/: Dockerfile
.yocto/conf/: bblayers.conf  local.conf
.yocto/custom-images/: README
.yocto/custom-images/conf/: layer.conf
.yocto/custom-images/recipes-core/images/: minimal-xfce.bb
.yocto/meta-custom/recipes-example/example/: example_0.1.bb
.yocto/meta-custom/recipes-example/wiringPi/: wiringpi_git.bb
.yocto/meta-custom/recipes-service/service/: autostart.bb
.yocto/meta-custom/recipes-service/service/files/: autostart.sh  (+2 more)
.yocto/meta-image-config/conf/: layer.conf
BMP280/: BMP280.cpp  BMP280.h
Documentation/: requirements.txt
aws/: CMakeLists.txt  main.cpp
config/: config.json
dispay_sh1106/: fontx.cpp  fontx.h  oled.cpp  oled.h  u8g2_hw_i2c.cpp
driver/: bmp280.c  bmp280.cpp
i2c_impl/: I2CDevice.cpp  I2CDevice.h  I2CInputOutput.cpp  I2CInputOutput.h  RaspberryPi.cpp  RaspberryPi.h
include/: RawData.h  aws.h  bmp280data.h  data_base.h  data_manager.h  data_output.h  data_reading.h  json.h  mqtt.h  raspberry_bmp280.h  settings.h  settings_pop_up.h
src/: RawData.cpp  aws.cpp  bmp280data.cpp  data_base.cpp  data_manager.cpp  data_output.cpp  data_reading.cpp  form.cpp  form.h  form.ui  json.cpp  main.cpp  mki109v1.cpp  mki109v1.h  mqtt.cpp  raspberry_bmp280.cpp  settings.cpp  settings_pop_up.cpp
ui/: ui_form.h  ui_settings_pop_up.h
utils/: CommandLineUtils.cpp
(+3 files in other folders)
